[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", features = ["openssl"] }
openssl = { version = "0.10.44", features = ["v110"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
lazy_static = "1.4.0"
redis = { version = "0.22.1", features = ["json"] }
clokwerk = "0.4.0"